--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,48 @@
- <h1>{{title}}</h1>
-    <h2>My Heroes</h2>
-    <ul class="heroes">
-      <li *ngFor="let hero of heroes"
-        [class.selected]="hero === selectedHero"
-        (click)="onSelect(hero)">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
-      </li>
-    </ul>
-    <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<div class="page-wrap fullbg">
+    <!--Loggin Wrapper starts here-->
+    <div class="content-wrapper">
+    	<div class="branding">
+        <!--<img src="assets/images/aliveLogo.png" alt="">-->
+        	<div class="logo left"><img src="assets/images/aliveLogo.png" width="126" height="63" alt=""/></div>
+            <div class="title right"></div>
+            <div class="clear"></div>
+        </div>
+    	<div class="login-box ">
+    	   <p>&nbsp;</p>
+    	   <div class="left">
+       		 <h1>Log in to Alive CMS</h1>
+                <div class="login-form">
+                	<label> Email or User ID </label>
+                	<p><input type="text"></p>
+                	<label> Password </label>
+        			<p><input type="password"></p>
+                  <p><input type="checkbox">Remember Me</p>
+           		  <p><input type="button" value="Login" class="pbtn primary"></p>
+                    <small>By clicking Log In you agree to our <a href="javascript:void(0)">Terms of Use</a> and <a href="javascript:void(0)">Privacy Statement</a>.</small>
+                    <div class="clear"></div>
+                </div>
+           </div>
+           <div class="right">
+           		<div class="help-block">
+                	<h6>Forgot your password?</h6>
+                    <a href="javascript:void(0)"> Retrieve password</a>
+                </div>
+                <div class="help-block">
+                	<h6>Contact Us</h6>
+                    <a href="javascript:void(0)"> support@alivear.com</a>
+                </div>
+           </div>
+           <div class="clear"></div>
+        </div>
+    </div>
+    <!--Loggin Wrapper ends here-->
+</div>
+<!--Page Content ends here-->
+<!--footer starts here-->
+<footer class="site-footer">
+	<div class="content-wrapper">
+    	<div class="text-center">Powered by : Times Internet &copy;</div>
+        <div class="clear"></div>
+    </div>
+</footer>
+<!--footer ends here-->
